# Resume_Optimization_Agent

./: .env.example  .gitignore  README.md  pyproject.toml
resume_agent/: __init__.py  cli.py  enrich_service.py  service.py  web.py
resume_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
resume_agent/core/: __init__.py  assembler.py  coverage.py  enrichment.py  fallback.py  lint_source.py  repair.py  selector.py  validate_source.py  validator.py
resume_agent/export/: __init__.py  docx.py  estimate.py  fit.py
resume_agent/llm/: __init__.py  _json.py  client.py  enrich_llm.py  jd_analyzer.py  tailor.py
resume_agent/llm/prompts/: jd_analyze.py  tailor.py
resume_agent/models/: __init__.py  config.py  inference.py  jd.py  llm_io.py  output.py  selection.py  source.py
resume_agent/parsing/: __init__.py  extract.py  parser.py  prompts.py  schema.py
resume_agent/web_static/: index.html
tests/: conftest.py  test_enrichment.py  test_selector.py  test_service_e2e.py  test_validate_source.py  test_validator.py
tests/fixtures/: jd_sample.txt  source_sample.json
